--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <hr>
     <form action="mailto:info@Wedontknow.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
-      <input type="text" name="yourName"<br>
+      <input type="text" name="yourName"><br>
       <label>Your Email:</label>
       <input type="email" name="yourEmail"><br>
       <label>Your Message</label><br>
